RESOLVED FIXED93440
[Blackberry] missing a Multipart header when m_multipartResponse is null
https://bugs.webkit.org/show_bug.cgi?id=93440
Summary [Blackberry] missing a Multipart header when m_multipartResponse is null
Chris.Guan
Reported 2012-08-07 23:30:50 PDT
In NetworkJob::handleNotifyMultipartHeaderReceived function: when m_multipartResponse is null, we just created new one but not called setHTTPHeaderField. so we missed this received multipart Header.
Attachments
Patch (2.32 KB, patch)
2012-08-07 23:41 PDT, Chris.Guan
no flags
Chris.Guan
Comment 1 2012-08-07 23:41:35 PDT
Charles Wei
Comment 2 2012-08-08 04:30:15 PDT
Comment on attachment 157130 [details] Patch Looks good to me.
WebKit Review Bot
Comment 3 2012-08-08 05:11:38 PDT
Comment on attachment 157130 [details] Patch Clearing flags on attachment: 157130 Committed r125022: <http://trac.webkit.org/changeset/125022>
WebKit Review Bot
Comment 4 2012-08-08 05:11:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.