[Blackberry] missing a Multipart header when m_multipartResponse is null https://bugs.webkit.org/show_bug.cgi?id=93440

Patch by Chris Guan <chris.guan@torchmobile.com.cn> on 2012-08-08
Reviewed by George Staikos.

when m_multipartResponse is null, we just created new one but not called
setHTTPHeaderField. So we missed this received multipart Header. We should
call setHTTPHeaderField for each reveived header.

No new tests, because those current multipart test cases (http/tests/multipart/*)
are enough.

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::handleNotifyMultipartHeaderReceived):

Canonical link: https://commits.webkit.org/111330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125022 268f45cc-cd09-0410-ab3c-d52691b4dbfc